test/configCases/errors/error-cause-extraction/index.js
throw new Error("Error processing ");
